# omegamaxent_interface

./: .clang-tidy  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  OmegaMaxEnt_TRIQS_user guide  README.md  cpp
.github/workflows/: build.yml
cmake/: FindMathJax.cmake
doc/: CMakeLists.txt  ChangeLog.md  OmegaMaxEnt_TRIQS_user_guide.txt  about.rst  conf.py.in  contents.rst  index.rst  install.rst
doc/_templates/: sideb.html
doc/reference/: contents.rst
omegamaxent/: CMakeLists.txt
omegamaxent/cpp/: CMakeLists.txt
packaging/: CMakeLists.txt  TRIQS-omegamaxent_interface-3.0.0-foss-2019a-Python-3.7.2.eb  TRIQS-omegamaxent_interface-3.1.0-foss-2021b.eb  TRIQS-omegamaxent_interface-3.2.0-foss-2021b.eb  TRIQS-omegamaxent_interface-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
python/: CMakeLists.txt  OmegaMaxEnt_TRIQS.py  OmegaMaxEnt_parameters.py
share/: CMakeLists.txt  omegamaxent_interface.modulefile.in  omegamaxent_interfacevars.sh.in
share/cmake/: CMakeLists.txt  omegamaxent_interface-config.cmake.in
test/python/: CMakeLists.txt  test_Freq.py  test_Freq2.py  test_Freq_boson.py  test_Freq_chi.py  test_Time.py  test_Time_boson.py  test_Time_chi.py  test_block.py  test_matrix.py
tests/python/: CMakeLists.txt  test_Freq.py  test_Freq2.py  test_Time.py  test_block.py  test_matrix.py
tests/python/test1_matrix_G/: G.h5  matrix_G_1.py
tutorials/: CTHYB_AC_NRG.ipynb  DFT_DMFT_Analytic_Continuation_of_Sr2RuO4_self_energy.ipynb  DFT_DMFT_Analytic_Continuation_of_Sr2RuO4_solution.ipynb  DMFT+DFT+Analytic Continuation for Sr2RuO4.ipynb  DMFT+DFT+Analytic Continuation for Sr2RuO4_solution.ipynb  DMFT_CTQMC_Analytic Continuation_vs_NRG.ipynb  DMFT_CTQMC_Analytic_Continuation_vs_NRG.ipynb  DMFT_CTQMC_Analytic_Continuation_vs_NRG_solution.ipynb  DMFT_Continuous Time QMC + Analytic Continuation vs Numerical Renormalization.ipynb  DMFT_Continuous Time QMC + Analytic Continuation vs Numerical Renormalization_solution.ipynb  G_iomega_1.ipynb  G_iomega_1_solution.ipynb  Introduction to OmegaMaxEnt_TRIQS.ipynb  Introduction to OmegaMaxEnt_TRIQS_solution.ipynb  Introduction_OmegaMaxEnt_TRIQS.ipynb  Introduction_OmegaMaxEnt_TRIQS_solution.ipynb  Sr2RuO4.ipynb  Sr2RuO4_solution.ipynb
tutorials/Sr2RuO4/: Sr2RuO4_b200_w90.h5  Sr2RuO4_b50_w90.h5
